# raytraceInAWE

./: .gitignore  CMakeLists.txt  camera.hpp  main.cpp  ray.hpp
Materials/: dielectricMaterial.hpp  diffuseMaterial.hpp  fuzzyMetal.hpp  material.hpp  metalMaterial.hpp
Objects/: hittable.hpp  hittable_list.hpp  sphere.hpp  world.hpp
Utils/: clocks.hpp  color.hpp  maths.hpp  ray.hpp  vec3.hpp
